// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZoneGroup matches snapshot 1`] = `
<ZoneGroup
  currentTracks={
    Object {
      "myhost": Object {},
    }
  }
  group={
    Object {
      "ZoneGroupMember": Array [
        Object {
          "Coordinator": "true",
          "member": 1,
        },
      ],
      "host": "myhost",
    }
  }
  playStates={
    Object {
      "myhost": "playing",
    }
  }
  selectGroup={[MockFunction]}
  showManagement={[MockFunction]}
>
  <div
    className="not-selected zone-group"
    onClick={[Function]}
  >
    <ul>
      <Component
        key="0"
        member={
          Object {
            "Coordinator": "true",
            "member": 1,
          }
        }
      >
        <p
          className="member"
        />
      </Component>
    </ul>
    <div
      className="group-button"
      onClick={[Function]}
    >
      Group
    </div>
    <ZoneGroupPlayState
      currentTrack={Object {}}
      playState="playing"
    >
      <p
        className="play-state"
      />
    </ZoneGroupPlayState>
  </div>
</ZoneGroup>
`;

exports[`ZoneGroup matches snapshot when selected 1`] = `
<ZoneGroup
  currentHost="myhost"
  currentTracks={
    Object {
      "myhost": Object {},
    }
  }
  group={
    Object {
      "ZoneGroupMember": Array [
        Object {
          "Coordinator": "true",
          "member": 1,
        },
      ],
      "host": "myhost",
    }
  }
  playStates={
    Object {
      "myhost": "playing",
    }
  }
  selectGroup={[MockFunction]}
  showManagement={[MockFunction]}
>
  <div
    className="selected zone-group"
    onClick={[Function]}
  >
    <ul>
      <Component
        key="0"
        member={
          Object {
            "Coordinator": "true",
            "member": 1,
          }
        }
      >
        <p
          className="member"
        />
      </Component>
    </ul>
    <div
      className="group-button"
      onClick={[Function]}
    >
      Group
    </div>
    <ZoneGroupPlayState
      currentTrack={Object {}}
      playState="playing"
    >
      <p
        className="play-state"
      />
    </ZoneGroupPlayState>
  </div>
</ZoneGroup>
`;
